--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,16 +5,24 @@
   <div>
     <form action="/campgrounds/<%= campground._id %>?_method=put" method="post">
       <div class="form-group">
-        <input class="form-control" type="text" name="campground[name]" value="<%= campground.name %>">
+        <label for="name">Name</label>
+        <input id="name" class="form-control" type="text" name="campground[name]" value="<%= campground.name %>">
       </div>
       <div class="form-group">
-        <input class="form-control" type="number" name="campground[price]" value="<%= campground.price %>" min="0.01" step="0.01">
+        <label for="image">Image</label>
+        <input id="image" class="form-control" type="text" name="campground[image]" value="<%= campground.image %>">
       </div>
       <div class="form-group">
-        <input class="form-control" type="text" name="campground[image]" value="<%= campground.image %>">
+        <label for="description">Description</label>
+        <input id="description" class="form-control" type="text" name="campground[description]" value="<%= campground.description %>">
       </div>
       <div class="form-group">
-        <input class="form-control" type="text" name="campground[description]" value="<%= campground.description %>">
+        <label for="price">Price</label>
+        <input id="price" class="form-control" type="number" name="campground[price]" value="<%= campground.price %>" min="0.01" step="0.01">
+      </div>
+      <div class="form-group">
+        <label for="location">Location</label>
+        <input id="location" class="form-control" type="text" name="campground[location]" value="<%= campground.location %>">
       </div>
       <div class="form-group">
         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
