--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -5,16 +5,24 @@
   <div>
     <form action="/campgrounds" method="post">
       <div class="form-group">
-        <input class="form-control" type="text" name="campground[name]" placeholder="name">
+        <label for="name">Name</label>
+        <input id="name" class="form-control" type="text" name="campground[name]" placeholder="name">
       </div>
       <div class="form-group">
-        <input class="form-control" type="number" name="campground[price]" placeholder="price" min="0.01" step="0.01">
+        <label for="image">Image</label>
+        <input id="image" class="form-control" type="text" name="campground[image]" placeholder="image url">
       </div>
       <div class="form-group">
-        <input class="form-control" type="text" name="campground[image]" placeholder="image url">
+        <label for="description">Description</label>
+        <input id="description" class="form-control" type="text" name="campground[description]" placeholder="description">
       </div>
       <div class="form-group">
-        <input class="form-control" type="text" name="campground[description]" placeholder="description">
+        <label for="price">Price</label>
+        <input id="price" class="form-control" type="number" name="campground[price]" placeholder="price" min="0.01" step="0.01">
+      </div>
+      <div class="form-group">
+        <label for="location">Location</label>
+        <input id="location" class="form-control" type="text" name="campground[location]" placeholder="location">
       </div>
       <div class="form-group">
         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
