--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -8,6 +8,9 @@
       <li class="list-group-item">Info 2</li>
       <li class="list-group-item">Info 3</li>
     </div>
+    <div id="map">
+
+    </div>
   </div>
   <div class="col-md-9">
     <div class="thumbnail">
@@ -52,5 +55,31 @@
     </div>
   </div>
 </div>
+
+<script>
+  function initMap() {
+    let lat = <%= campground.lat %>;
+    let lng = <%= campground.lng %>;
+    let center = { lat, lng };
+    let map = new google.maps.Map(document.getElementById("map"), {
+      zoom: 8,
+      center: center,
+      scrollwheel: false
+    });
+    let infowindow = new google.maps.InfoWindow({
+      content: contentString
+    });
+    let marker = new google.maps.Marker({
+      position: center,
+      maps: map,
+    });
+    marker.addEventListener("click", () => {
+      infowindow.open(map, marker);
+    });
+  }
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcj4T1xxATAKk8PkatvBbP6JNCEEmplEA&callback=initMap">
+
+</script>
 
 <% include ../partials/footer %>
