--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -5,7 +5,8 @@
   <div>
     <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=put" method="post">
       <div class="form-group">
-        <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
+        <label for="comment">Comment</label>
+        <input id="comment" class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
       </div>
       <div class="form-group">
         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
