--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -22,7 +22,7 @@
         <p>
           <em>Submitted by <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></em>
         </p>
-        <% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
+        <% if (currentUser && (campground.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
           <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
           <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=delete" method="post">
             <button class="btn btn-danger">Delete</button>
@@ -43,7 +43,7 @@
             <p>
               <%= comment.text %>
             </p>
-            <% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
+            <% if (currentUser && (comment.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
               <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
               <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=delete" method="post">
                 <input class="btn btn-xs btn-danger" type="submit" value="Delete">
