--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,10 +5,12 @@
   <div>
     <form action="/register" method="post">
       <div class="form-group">
-        <input class="form-control" type="text" name="username" placeholder="username">
+        <label for="username">Username</label>
+        <input id="username" class="form-control" type="text" name="username" placeholder="username">
       </div>
       <div class="form-group">
-        <input class="form-control" type="password" name="password" placeholder="password">
+        <label for="password">Password</label>
+        <input id="password" class="form-control" type="password" name="password" placeholder="password">
       </div>
       <div class="form-group">
         <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
