--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -44,10 +44,12 @@
               <%= comment.text %>
             </p>
             <% if (currentUser && (comment.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
-              <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-              <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=delete" method="post">
-                <input class="btn btn-xs btn-danger" type="submit" value="Delete">
-              </form>
+              <div class="pull-right">
+                <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=delete" method="post">
+                  <input class="btn btn-xs btn-danger" type="submit" value="Delete">
+                </form>
+              </div>
             <% } %>
           </div>
         </div>
