--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,6 +13,22 @@
         <input id="password" class="form-control" type="password" name="password" placeholder="password">
       </div>
       <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input id="firstName" class="form-control" type="text" name="firstName" placeholder="first name">
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last Name</label>
+        <input id="lastName" class="form-control" type="text" name="lastName" placeholder="last name">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input id="email" class="form-control" type="email" name="email" placeholder="email">
+      </div>
+      <div class="form-group">
+        <label for="profilePic">Profile Picture</label>
+        <input id="profilePic" class="form-control" type="text" name="profilePic" placeholder="profile picture url">
+      </div>
+      <div class="form-group">
         <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
       </div>
     </form>
