--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -1,12 +1,12 @@
-<% include ../partials/header %>
+<% include ./partials/header %>
 
 <div class="row">
   <div class="col-md-12">
     <form action="/forgot" method="post">
       <legend>Forgot Password</legend>
       <div class="form-group">
-        <label for="email"></label>
-        <input id="email" class="form-control" type="email" name="email" autofocus>
+        <label for="email">Email</label>
+        <input id="email" class="form-control" type="email" name="email" placeholder="email" autofocus>
       </div>
       <div class="form-group">
         <button class="btn btn-primary">Reset Password</button>
@@ -15,4 +15,4 @@
   </div>
 </div>
 
-<% include ../partials/footer %>
+<% include ./partials/footer %>
