--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,15 +2,34 @@
 
 <div class="row">
   <div class="col-md-3">
-    <p class="lead">YelpCamp</p>
+    <h4>Submitted by</h4>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <div class="panel-title"><%= user.firstName + " " + user.lastName %></div>
+      </div>
+      <div class="panel-body">
+        <p>
+          <a href="/users/<%= campground.author.id %>"><%= campground.author.username %></a>
+        </p>
+        <p>
+          <em><%= moment(campground.createdAt).fromNow() %></em>
+        </p>
+        <div class="thumbnail">
+          <img src="<%= user.profilePic %>" alt="user profile image">
+          <div class="caption">
+            <a href="mailto:<%= user.email %>"><%= user.email %></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h4><%= user.firstName %>'s campgrounds</h4>
     <div class="list-group">
-      <li class="list-group-item active">Info 1</li>
-      <li class="list-group-item">Info 2</li>
-      <li class="list-group-item">Info 3</li>
+      <a class="list-group-item active" href="#"><%= campground.name %></a>
+      <% userCampgrounds.forEach((campground) => { %>
+        <a class="list-group-item" href="/campgrounds/<%= campground.id %>"><%= campground.name %></a>
+      <% }) %>
     </div>
-    <div id="map">
-
-    </div>
+    <div id="map"></div>
   </div>
   <div class="col-md-9">
     <div class="thumbnail">
@@ -19,9 +38,6 @@
         <h4 class="pull-right">$<%= campground.price %>/night</h4>
         <h4><a href="#"><%= campground.name %></a></h4>
         <p><%= campground.description %></p>
-        <p>
-          <em>Submitted by <a href="/users/<%= campground.author.id %>"><%= campground.author.username %></a>, <%= moment(campground.createdAt).fromNow() %></em>
-        </p>
         <% if (currentUser && (campground.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
           <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
           <form class="delete-form" action="/campgrounds/<%= campground._id %>?_method=delete" method="post">
