Add registration password confirmation

--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -1,9 +1,9 @@
 <% include ./partials/header %>
 
 <div class="row">
-  <div class="col-md-12">
+  <h1>Forgot your password?</h1>
+  <div>
     <form action="/forgot" method="post">
-      <legend>Forgot Password</legend>
       <div class="form-group">
         <label for="email">Email</label>
         <input id="email" class="form-control" type="email" name="email" placeholder="email" autofocus>
