--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,12 @@
         <button class="btn btn-lg btn-primary btn-block">Login</button>
       </div>
     </form>
-    <a href="/campgrounds">Go Back</a>
+    <div>
+      <a href="/campgrounds">Go Back</a>
+    </div>
+    <div>
+      <a href="/forgot">Forgot your password?</a>
+    </div>
   </div>
 </div>
 
