--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,14 @@
   <div>
     <form action="/register" method="post">
       <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input id="firstName" class="form-control" type="text" name="firstName" placeholder="first name">
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last Name</label>
+        <input id="lastName" class="form-control" type="text" name="lastName" placeholder="last name">
+      </div>
+      <div class="form-group">
         <label for="username">Username</label>
         <input id="username" class="form-control" type="text" name="username" placeholder="username">
       </div>
@@ -13,12 +21,8 @@
         <input id="password" class="form-control" type="password" name="password" placeholder="password">
       </div>
       <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input id="firstName" class="form-control" type="text" name="firstName" placeholder="first name">
-      </div>
-      <div class="form-group">
-        <label for="lastName">Last Name</label>
-        <input id="lastName" class="form-control" type="text" name="lastName" placeholder="last name">
+        <label for="confirm">Confirm password</label>
+        <input id="confirm" class="form-control" type="password" name="confirm" placeholder="retype your password">
       </div>
       <div class="form-group">
         <label for="email">Email</label>
