Styling login forgot reset forms

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -18,9 +18,13 @@ h1 {
   text-align: center;
 }
 
-h1 + div {
+.entry-form {
   width: 30%;
   margin: 25px auto;
+}
+
+legend {
+  text-align: center;
 }
 
 /* Google Maps */
