--- a/views/accounts/register.ejs
+++ b/views/accounts/register.ejs
@@ -1,9 +1,9 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <div class="row">
   <h1>Sign Up</h1>
   <div>
-    <form action="/register" method="post">
+    <form action="/accounts/register" method="post">
       <div class="form-group">
         <label for="firstName">First Name</label>
         <input id="firstName" class="form-control" type="text" name="firstName" placeholder="first name">
@@ -40,4 +40,4 @@
   </div>
 </div>
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
