--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,6 +14,33 @@
   display: inline;
 }
 
+.flex {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+/* work around for flex-wrap in safari */
+.flex.container:before,
+.flex.container:after,
+.flex.row:before,
+.flex.row:after {
+  content: normal;
+}
+
+.image {
+  width: 100%;
+  height: 250px;
+  background-size: cover;
+  background-position: center;
+}
+
 h1 {
   text-align: center;
 }
