--- a/views/accounts/register.ejs
+++ b/views/accounts/register.ejs
@@ -1,43 +1,41 @@
 <% include ../partials/header %>
 
-<div class="row">
-  <h1>Sign Up</h1>
-  <div>
-    <form action="/accounts/register" method="post">
-      <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input id="firstName" class="form-control" type="text" name="firstName" placeholder="first name">
-      </div>
-      <div class="form-group">
-        <label for="lastName">Last Name</label>
-        <input id="lastName" class="form-control" type="text" name="lastName" placeholder="last name">
-      </div>
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input id="username" class="form-control" type="text" name="username" placeholder="username">
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input id="password" class="form-control" type="password" name="password" placeholder="password">
-      </div>
-      <div class="form-group">
-        <label for="confirm">Confirm password</label>
-        <input id="confirm" class="form-control" type="password" name="confirm" placeholder="retype your password">
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input id="email" class="form-control" type="email" name="email" placeholder="email">
-      </div>
-      <div class="form-group">
-        <label for="profilePic">Profile Picture</label>
-        <input id="profilePic" class="form-control" type="text" name="profilePic" placeholder="profile picture url">
-      </div>
-      <div class="form-group">
-        <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
-      </div>
-    </form>
-    <a href="/campgrounds">Go Back</a>
-  </div>
+<div class="row entry-form">
+  <form action="/accounts/register" method="post">
+    <legend>Sign Up</legend>
+    <div class="form-group">
+      <label for="firstName">First Name</label>
+      <input id="firstName" class="form-control" type="text" name="firstName" placeholder="first name">
+    </div>
+    <div class="form-group">
+      <label for="lastName">Last Name</label>
+      <input id="lastName" class="form-control" type="text" name="lastName" placeholder="last name">
+    </div>
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input id="username" class="form-control" type="text" name="username" placeholder="username">
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input id="password" class="form-control" type="password" name="password" placeholder="password">
+    </div>
+    <div class="form-group">
+      <label for="confirm">Confirm password</label>
+      <input id="confirm" class="form-control" type="password" name="confirm" placeholder="retype your password">
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input id="email" class="form-control" type="email" name="email" placeholder="email">
+    </div>
+    <div class="form-group">
+      <label for="profilePic">Profile Picture</label>
+      <input id="profilePic" class="form-control" type="text" name="profilePic" placeholder="profile picture url">
+    </div>
+    <div class="form-group">
+      <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
+    </div>
+  </form>
+  <a href="/campgrounds">Go Back</a>
 </div>
 
 <% include ../partials/footer %>
