--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,19 +1,17 @@
 <% include ../partials/header %>
 
-<div class="row">
-  <h1>Edit Comment</h1>
-  <div>
-    <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=put" method="post">
-      <div class="form-group">
-        <label for="comment">Comment</label>
-        <input id="comment" class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
-      </div>
-      <div class="form-group">
-        <button class="btn btn-lg btn-primary btn-block">Submit!</button>
-      </div>
-    </form>
+<div class="row entry-form">
+  <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=put" method="post">
+    <legend>Edit Comment</legend>
+    <div class="form-group">
+      <label for="comment">Comment</label>
+      <input id="comment" class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
+    </div>
+    <div class="form-group">
+      <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+    </div>
+  </form>
     <a href="/campgrounds">Go Back</a>
-  </div>
 </div>
 
 <% include ../partials/footer %>
