--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,19 +1,17 @@
 <% include ../partials/header %>
 
-<div class="row">
-  <h1>Add New Comment to <%= campground.name %></h1>
-  <div>
-    <form action="/campgrounds/<%= campground._id %>/comments" method="post">
-      <div class="form-group">
-        <label for="comment">Comment</label>
-        <input id="comment" class="form-control" type="text" name="comment[text]" placeholder="text">
-      </div>
-      <div class="form-group">
-        <button class="btn btn-lg btn-primary btn-block">Submit!</button>
-      </div>
-    </form>
-    <a href="/campgrounds">Go Back</a>
-  </div>
+<div class="row entry-form">
+  <form action="/campgrounds/<%= campground._id %>/comments" method="post">
+    <legend>Add New Comment to <%= campground.name %></legend>
+    <div class="form-group">
+      <label for="comment">Comment</label>
+      <input id="comment" class="form-control" type="text" name="comment[text]" placeholder="text">
+    </div>
+    <div class="form-group">
+      <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+    </div>
+  </form>
+  <a href="/campgrounds">Go Back</a>
 </div>
 
 <% include ../partials/footer %>
