--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -19,13 +19,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-
           <a class="navbar-brand" href="/">YelpCamp</a>
         </div>
+
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="<%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
           </ul>
+          <form class="navbar-form navbar-right" role="search" action="/campgrounds" method="get">
+            <div class="form-group">
+              <input class="form-control" type="text" name="search" placeholder="Search campgounds">
+              <button type="submit" class="btn btn-default">Search</button>
+            </div>
+          </form>
           <ul class="nav navbar-nav navbar-right">
             <% if (!currentUser) { %>
               <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/accounts/login">Login</a></li>
