Fix bug with passwords not matching crash

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,7 +36,7 @@
             <% } %>
           </ul>
           <div class="col-sm-3 col-md-3 pull-right">
-            <form class="navbar-form" role="search" action="/campgrounds" method="get">
+            <form class="navbar-form inline-form" role="search" action="/campgrounds" method="get">
               <div class="form-group">
                 <input class="form-control" type="text" name="search" placeholder="Search">
                 <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
