--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -95,6 +95,6 @@
     });
   }
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.MAPS_API_KEY %>&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.GOOGLE_API %>&callback=initMap"></script>
 
 <% include ../partials/footer %>
